# yolo_pedestrian_detector

./: CMakeLists.txt  README.md  YOLO.h  main.cpp
